# DS5Dongle-by-Ohad-1.0.5-USBMode-MIDIMenu

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG_HE.md  CMakeLists.txt  README.md  README_HE.md
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/: MA2_MIDI_ONLY.md  MA2_TELNET_USBNET_HE.md  PRODUCT_SPECIFICATION.html  PRODUCT_SPECIFICATION.md  USER_MANUAL.html  USER_MANUAL.md
docs/en/: FAQ.html  FAQ.md  PRODUCT_SPECIFICATION.html  PRODUCT_SPECIFICATION.md  TROUBLESHOOTING.html  TROUBLESHOOTING.md  USER_MANUAL.html  USER_MANUAL.md
docs/he/: FAQ.md  TROUBLESHOOTING.md  USER_MANUAL.md
scripts/: mic_diag.sh  remap_test.py  set_ds5.py  test_speaker.sh
src/: app_stubs.cpp  audio.cpp  audio.h  bt.cpp  bt.h  cmd.cpp  cmd.h  config.cpp  config.h  lwipopts.h  ma2_oled.cpp  ma2_telnet.cpp  ma2_telnet.h  main.cpp  midi_pt.cpp  midi_pt.h  oled.cpp  oled.h  oled_font.h  oled_hebrew_font.h  remap.cpp  remap.h  slots.cpp  slots.h  state_mgr.cpp  state_mgr.h  telnet_settings.cpp  telnet_settings.h  tusb_config.h  usb.cpp  usb.h  usb_descriptors.cpp  usb_net_lwip.cpp  usb_net_lwip.h
